--- a/src/partials/home.html
+++ b/src/partials/home.html
@@ -1,12 +1,12 @@
-<div class="container">
+<div class="container" ng-controller="TestForm">
 
 	<form novalidate class="simple-form">
-		Name: <input type="text" ng-model="user.name" /><br />
-		E-mail: <input type="email" ng-model="user.email" /><br />
-		Gender: <input type="radio" ng-model="user.gender" value="male" />male
-		<input type="radio" ng-model="user.gender" value="female" />female<br />
-		<input type="button" ng-click="reset()" value="Reset" />
-		<input type="submit" ng-click="update(user)" value="Save" />
+		Name: <input type="text" ng-model="user.name"><br>
+		E-mail: <input type="email" ng-model="user.email"><br>
+		Gender: <input type="radio" ng-model="user.gender" value="male">male
+		<input type="radio" ng-model="user.gender" value="female">female<br>
+		<input type="button" ng-click="reset()" value="Reset">
+		<input type="submit" ng-click="update(user)" value="Save">
 	</form>
 	<pre>user = {{user | json}}</pre>
 	<pre>master = {{master | json}}</pre>
@@ -19,4 +19,3 @@
 	</span>
 
 </div>
-
