--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -11,11 +11,11 @@
     </div>
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="#/">Hlavní stánka</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li ng-class="getActiveClass('/')"><a href="#/">Hlavní stánka</a></li>
+        <li ng-class="getActiveClass('/scores')"><a href="#/scores">Výsledky</a></li>
+        <li ng-class="getActiveClass('/contact')"><a href="#/contact">Contact</a></li>
         <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
             <li><a href="#">Action</a></li>
             <li><a href="#">Another action</a></li>
@@ -28,7 +28,33 @@
         </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="">Přihlásit se</a></li>
+      	<li><button ng-click="dump()">SHOW ME</button></li>
+        <li class="dropdown">
+          <a href="" class="dropdown-toggle" data-toggle="dropdown">Přihlásit se <b class="caret"></b></a>
+          <ul class="dropdown-menu" style="padding: 15px;min-width: 250px;">
+            <li>
+              <div class="row" ng-controller="Login">
+                <div class="col-md-12">
+                  <form class="form" novalidate accept-charset="UTF-8" id="login-nav">
+                    <div class="form-group">
+                      <label class="sr-only" for="logName">Email address</label>
+                      <input ng-model="user.name" type="text" class="form-control" id="logName" placeholder="Název účtu" required>
+                    </div>
+                    <div class="form-group">
+                      <label class="sr-only" for="pass">Password</label>
+                      <input ng-model="user.password" type="password" class="form-control" id="pass" placeholder="Heslo" required>
+                    </div>
+                    <div class="form-group">
+                      <input type="submit" class="btn btn-primary" ng-click="send(user)" value="Přihlásit">
+                      <br>
+                      <a href="#">Forgot Password?</a>
+                    </div>
+                  </form>
+                </div>
+              </div>
+            </li>
+          </ul>
+        </li>
       </ul>
     </div><!--/.nav-collapse -->
   </div>
