datepicker, dynamic form input adding

--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -12,8 +12,9 @@
     <div class="navbar-collapse collapse">
       <ul class="nav navbar-nav">
         <li ng-class="getActiveClass('/')"><a href="#/">Hlavní stánka</a></li>
+        <li ng-class="getActiveClass('/newTournament')"><a href="#/newTournament">Nový turnaj</a></li>
+        <li ng-class="getActiveClass('/scoring')"><a href="#/scoring">Skórování</a></li>
         <li ng-class="getActiveClass('/scores')"><a href="#/scores">Výsledky</a></li>
-        <li ng-class="getActiveClass('/contact')"><a href="#/contact">Contact</a></li>
         <li class="dropdown">
           <a href="" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
