--- a/src/partials/home.html
+++ b/src/partials/home.html
@@ -1,6 +1,6 @@
 <div class="container" ng-controller="TestForm">
 
-	<form novalidate class="simple-form">
+	<form>
 		Name: <input type="text" ng-model="user.name"><br>
 		E-mail: <input type="email" ng-model="user.email"><br>
 		Gender: <input type="radio" ng-model="user.gender" value="male">male
