--- a/src/partials/scoring.html
+++ b/src/partials/scoring.html
@@ -1,6 +1,6 @@
-<div class="container" ng-controller="Scores">
+<div class="container" ng-controller="Scoring">
 
-	<h1>Výsledky</h1>
+	<h1>Skórování</h1>
 
 	<form class="form">
 		<div class="form-group">
