--- a/src/partials/scoring.html
+++ b/src/partials/scoring.html
@@ -3,16 +3,43 @@
 	<h1>Skórování</h1>
 
 	<form class="form">
+		<div class="form-group row">
+			<label class="form-control-label col-sm-2" for="date">Turnaj:</label>
+			<div class="col-sm-10">
+				<select class="form-control" ng-model="selected.tournament"
+					ng-options="obj.name for obj in data">
+					<option value="">Vyberte turnaj</option>
+				</select>
+			</div>
+		</div>
+
+		<!-- <div class="form-group">
+			<input class="btn btn-primary" type="button" ng-click="select(selected.tournament)" value="Zobrazit zápasy">
+		</div> -->
+
+		<div class="form-group row">
+			<label class="form-control-label col-sm-2" for="date">Zápas:</label>
+			<div class="col-sm-10">
+				<select class="form-control" ng-model="selected.match" ng-disabled="!selected.tournament.matches"
+					ng-options="obj.team_home.name + ' vs. ' + obj.team_away.name for obj in selected.tournament.matches">
+					<option value="">Vyberte zápas</option>
+				</select>
+			</div>
+		</div>
+
+		<div class="form-group row">
+			<label class="form-control-label col-sm-2" for="date">Heslo:</label>
+			<div class="col-sm-10">
+				<input class="form-control" type="password" ng-model="selected.pass">
+			</div>
+		</div>
+
 		<div class="form-group">
-			<select class="form-control" ng-model="scoreSelect.tournament"
-				ng-options="obj.id as obj.name for obj in scoreSelect.options">
-				<option value="">Vyberte turnaj</option>
-			</select>
+			<input class="btn btn-primary" type="button" ng-click="score()" value="Skórovat"  ng-disabled="!selected.match">
 		</div>
 	</form>
 
-	<div>
-		{{scoreSelect.tournament | json}}
-	</div>
+	<pre>{{selected | json}}</pre>
+	<!-- <pre>{{selected.match | json}}</pre> -->
 
 </div>
