--- a/src/partials/home.html
+++ b/src/partials/home.html
@@ -1,10 +1,41 @@
 <div class="container">
 
-	<button ng-click="count = count + 1" ng-init="count=0">
-		Increment
-	</button>
-	<span>
-		count: {{count}}
-	</span>
+	<div class="row">
+		<div class="col-sm-6">
+			<div class="panel panel-primary">
+				<div class="panel-heading">Vytvořit turnaj</div>
+				<div class="panel-body">
+					
+				</div>
+			</div>
+		</div>
+
+		<div class="col-sm-6">
+			<div class="panel panel-primary">
+				<div class="panel-heading">Skórovat turnaj/zápas</div>
+				<div class="panel-body">
+					
+				</div>
+			</div>
+		</div>
+
+		<div class="col-sm-6">
+			<div class="panel panel-primary">
+				<div class="panel-heading">Zobrazit probíhající zápasy</div>
+				<div class="panel-body">
+					
+				</div>
+			</div>
+		</div>
+
+		<div class="col-sm-6">
+			<div class="panel panel-primary">
+				<div class="panel-heading">Zobrazit výsledky</div>
+				<div class="panel-body">
+					
+				</div>
+			</div>
+		</div>
+	</div>
 
 </div>
