--- a/src/partials/scoring.html
+++ b/src/partials/scoring.html
@@ -1,45 +1,116 @@
-<div class="container" ng-controller="Scoring">
+<div ng-controller="Scoring">
+	<div class="container">
 
-	<h1>Skórování</h1>
+		<h1>Skórování</h1>
 
-	<form class="form">
-		<div class="form-group row">
-			<label class="form-control-label col-sm-2" for="date">Turnaj:</label>
-			<div class="col-sm-10">
-				<select class="form-control" ng-model="selected.tournament"
-					ng-options="obj.name for obj in data">
-					<option value="">Vyberte turnaj</option>
-				</select>
+		<!-- <pre>{{actualScore | json}}</pre> -->
+
+		<form class="form">
+
+			<div class="form-group row">
+				<div class="col-sm-6">
+					<div class="panel panel-primary">
+						<div class="panel-heading">{{data.home.name}}</div>
+						<div class="panel-body">
+							<div class="text-center">
+								<h2>{{actualScore.home}}</h2>
+							</div>
+							<button type="button" class="btn btn-success btn-lg btn-block score-btn" 
+							ng-click="plus('home')" data-toggle="modal" data-target="#scorePoint">+</button>
+						</div>
+					</div>
+				</div>
+				<div class="col-sm-6">
+					<div class="panel panel-primary">
+						<div class="panel-heading">{{data.away.name}}</div>
+						<div class="panel-body">
+							<div class="text-center">
+								<h2>{{actualScore.away}}</h2>
+							</div>
+							<button type="button" class="btn btn-success btn-lg btn-block score-btn" 
+							ng-click="plus('away')" data-toggle="modal" href="#scorePoint">+</button>
+						</div>
+					</div>
+				</div>
+			</div>
+		</form>
+
+		<!-- <pre>{{scored | json}}</pre>
+		<pre>{{db | json}}</pre>
+		<pre>{{data[scored.team].players | json}}</pre> -->
+
+		<div id="scorePoint" class="modal" data-replace="true" aria-hidden="false">
+			<div class="modal-dialog">
+
+				<div class="modal-content">
+					<div class="modal-header">
+						<button type="button" class="close" data-dismiss="modal">&times;</button>
+						<h4 class="modal-title">{{ data[scored.team].name }} - přidat bod</h4>
+					</div>
+					<div class="modal-body row">
+						<div class="col-sm-6">
+							<div class="panel panel-default">
+								<div class="panel-heading">Asistence</div>
+								<div class="panel-body">
+									<div class="form-group">
+										<div class="radio">
+											<label class="radio">
+												<input type="radio" ng-model="scored.assist" value="null">
+												Anonym
+											</label>
+										</div>
+										<div class="radio" ng-class="disabled(assistent.id, scored.point)" ng-repeat="assistent in data[scored.team].players">
+											<label class="radio">
+												<input type="radio" ng-model="scored.assist" value="{{assistent.id}}" ng-disabled="compare(assistent.id, scored.point)">
+												{{assistent.name}}
+											</label>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+						<div class="col-sm-6">
+							<div class="panel panel-default">
+								<div class="panel-heading">Bod</div>
+								<div class="panel-body">
+									<div class="form-group">
+										<div class="radio">
+											<label class="radio">
+												<input type="radio" ng-model="scored.point" value="null">
+												Anonym
+											</label>
+										</div>
+										<div class="radio" ng-class="disabled(pointer.id, scored.assist)" ng-repeat="pointer in data[scored.team].players">
+											<label class="radio">
+												<input type="radio" ng-model="scored.point" value="{{pointer.id}}" ng-disabled="compare(pointer.id, scored.assist)">
+												{{pointer.name}}
+											</label>
+										</div>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div class="modal-footer">
+						<button type="button" class="btn btn-default" data-dismiss="modal" 
+						ng-click="score(false)">Zrušit</button>
+
+						<button type="button" class="btn btn-primary" data-dismiss="modal" 
+						ng-click="score(true)">Potvrdit</button>  <!-- ng-disabled="!scored[scored.team].assist || !scored[scored.team].point" -->
+					</div>
+				</div>
+
 			</div>
 		</div>
 
-		<!-- <div class="form-group">
-			<input class="btn btn-primary" type="button" ng-click="select(selected.tournament)" value="Zobrazit zápasy">
-		</div> -->
+	</div>
 
-		<div class="form-group row">
-			<label class="form-control-label col-sm-2" for="date">Zápas:</label>
-			<div class="col-sm-10">
-				<select class="form-control" ng-model="selected.match" ng-disabled="!selected.tournament.matches"
-					ng-options="obj.team_home.name + ' vs. ' + obj.team_away.name for obj in selected.tournament.matches">
-					<option value="">Vyberte zápas</option>
-				</select>
-			</div>
+	<div id="stepBack" class="stepBack text-right">
+		<div class="container">
+			<span class="right-space">Zrušit poslední zapsaný bod - {{ data[db[db.length-1].team].name }}</span>
+			<button type="button" class="btn btn-danger" 
+			ng-click="stepBack(false)">Zrušit</button>
 		</div>
-
-		<div class="form-group row">
-			<label class="form-control-label col-sm-2" for="date">Heslo:</label>
-			<div class="col-sm-10">
-				<input class="form-control" type="password" ng-model="selected.pass">
-			</div>
-		</div>
-
-		<div class="form-group">
-			<input class="btn btn-primary" type="button" ng-click="score()" value="Skórovat"  ng-disabled="!selected.match">
-		</div>
-	</form>
-
-	<pre>{{selected | json}}</pre>
-	<!-- <pre>{{selected.match | json}}</pre> -->
-
+	</div>
 </div>
