--- a/src/css/app.css
+++ b/src/css/app.css
@@ -14,6 +14,11 @@
 	font-size: 200%;
 }
 
+#flash-messages {
+	list-style-type: none;
+	padding: 0;
+}
+
 .modal div.radio {
 	margin: 0 -15px;
 	margin-right: -30px;
