--- a/src/partials/scores.html
+++ b/src/partials/scores.html
@@ -4,15 +4,45 @@
 
 	<form class="form">
 		<div class="form-group">
-			<select class="form-control" ng-model="scoreSelect.tournament"
-				ng-options="obj.id as obj.name for obj in scoreSelect.options">
+			<select class="form-control" ng-model="selected.tournament"
+				ng-options="obj.name for obj in data">
 				<option value="">Vyberte turnaj</option>
 			</select>
 		</div>
+		
+		<div class="form-group">
+			<select class="form-control" ng-model="selected.match" ng-disabled="isEmpty(selected.tournament)"
+				ng-options="obj.team_home.name + ' vs. ' + obj.team_away.name for obj in selected.tournament.matches">
+				<option value="">Vyberte zápas</option>
+			</select>
+		</div>
+
+		<!-- <div class="form-group">
+			<input class="btn btn-primary" type="button" value="Zobrazit výsledky" 
+			ng-disabled="isEmpty(selected.tournament)" ng-click="show()">
+		</div> -->
 	</form>
 
-	<div>
-		{{scoreSelect.tournament | json}}
+	<div class="table-responzive" ng-hide="isEmpty(scoreData.length)">
+		<table class="table table-striped">
+			<thead>
+				<tr>
+					<th>#</th>
+					<th>Domácí</th>
+					<th>Hosté</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr ng-repeat="one in scoreData">
+					<td>{{one.id}}</td>
+					<td>{{one.team_home.name}}</td>
+					<td>{{one.team_away.name}}</td>
+				</tr>
+			</tbody>
+		</table>
 	</div>
+
+	<!-- <pre>{{scoreData | json}}</pre> -->
+
 
 </div>
