--- a/src/partials/selectMatch.html
+++ b/src/partials/selectMatch.html
@@ -3,14 +3,11 @@
 	<h1><small>Turnaj</small> {{ data.name }} <small>Výběr zápasu</small></h1>
 
 	<form class="form">
-		<div class="form-group row">
-			<label class="form-control-label col-sm-2" for="match">Zápas:</label>
-			<div class="col-sm-10">
-				<select class="form-control" id="match" ng-model="selected.match" 
-					ng-options="obj.team_home.name + ' vs. ' + obj.team_away.name for obj in data.matches">
-					<option value="">Vyberte zápas</option>
-				</select>
-			</div>
+		<div class="form-group ">
+			<select class="form-control" id="match" ng-model="selected.match" 
+				ng-options="obj.team_home.name + ' vs. ' + obj.team_away.name for obj in data.matches">
+				<option value="">Vyberte zápas</option>
+			</select>
 		</div>
 
 		<div class="form-group">
