added: flash messages, auth of actions

--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -12,7 +12,7 @@
 		<div class="navbar-collapse collapse">
 			<ul class="nav navbar-nav">
 				<li ng-class="getActiveClass('/')"><a href="#/">Hlavní stánka</a></li>
-				<li ng-class="getActiveClass('/newTournament')"><a href="#/newTournament">Nový turnaj</a></li>
+				<li ng-show="logged(3)" ng-class="getActiveClass('/newTournament')"><a href="#/newTournament">Nový turnaj</a></li>
 				<li ng-show="logged(3)" ng-class="getActiveClass('/selectTournament')"><a href="#/selectTournament">Vybrat turnaj</a></li>
 				<li ng-show="logged(2)" ng-class="getActiveClass('/selectMatch')"><a href="#/selectMatch">Vybrat zápas</a></li>
 				<li ng-show="logged(1, true)" ng-class="getActiveClass('/spirit')"><a href="#/spirit">Hodnotit spirit</a></li>
