--- a/src/partials/404.html
+++ b/src/partials/404.html
@@ -1,6 +1,6 @@
 <div class="container">
 
-    <h1>Chyba 404, stánka nenalezena</h1>
+    <h1 class="alert alert-warning">Chyba 404, stánka nenalezena</h1>
 
 </div>
 <!-- /.container -->
