--- a/src/partials/scoring/selectTournament.html
+++ b/src/partials/scoring/selectTournament.html
@@ -1,5 +1,7 @@
 <div class="container" ng-controller="SelectTournament">
 
+	<div ng-include="'templates/breadcrumb.html'"></div>
+
 	<h1>Výběr turnaje</h1>
 
 	<form class="form">
