--- a/src/css/app.css
+++ b/src/css/app.css
@@ -19,6 +19,62 @@
 	padding: 0;
 }
 
+ol.steps {
+	list-style-type: none;
+}
+
+ol.steps li {
+	display: inline-block;
+}
+
+ol.steps li a {
+	display: block;
+}
+
+ol.steps li a,
+ol.steps li.active,
+ol.steps li.disabled {
+	padding: 7px 15px;
+	margin-right: 10px;
+	background-color: #eee;
+	border: 1px #ccc solid;
+	border-radius: 10px;
+	-webkit-border-radius: 10px;
+	-moz-border-radius: 10px;
+}
+
+ol.steps li.active {
+	color: #fff;
+	background-color: #2c3e50;
+}
+
+ol.steps li.disabled {
+	color: #666;
+}
+
+.nav-tabs>li.active>span,
+.nav-tabs>li.disabled>span {
+	position: relative;
+	display: block;
+	padding: 10px 15px;
+	margin-right: 2px;
+	line-height: 1.42857143;
+	border: 1px solid transparent;
+	border-radius: 4px 4px 0 0;
+	cursor: default;
+}
+
+.nav-tabs>li.active>span {
+	color: #555;
+	background-color: #fff;
+	border: 1px solid #ddd;
+	border-bottom-color: transparent;
+}
+
+.nav-tabs>li.disabled>span {
+	border: 1px solid transparent;
+}
+
 .modal div.radio {
 	margin: 0 -15px;
 	margin-right: -30px;
@@ -49,10 +105,21 @@
 	display: none;
 	padding: 10px 15px;
 	color: #fff;
-	background-color: #000;
-	opacity: 0.9;
+	background-color: #1c2e40;
+	font-size: 110%;
+}
+
+.stepBack .stepTitle {
+	padding-top: 7px;
 }
 
 .stepBack .right-space {
 	margin-right: 1em;
+}
+
+.stepBack .btn-stepBack {
+	color: #3cc;
+	background-color: transparent;
+	border: none;
+	padding: 7px 3em;
 }
