--- a/src/partials/scoring/selectMatch.html
+++ b/src/partials/scoring/selectMatch.html
@@ -1,5 +1,7 @@
 <div class="container" ng-controller="SelectMatch">
 
+	<div ng-include="'templates/breadcrumb.html'"></div>
+	
 	<h1><small>Turnaj</small> {{ data.name }} <small>Výběr zápasu</small></h1>
 
 	<form class="form">
